driver app images

--- a/app/views/features/driver_app.html.erb
+++ b/app/views/features/driver_app.html.erb
@@ -39,7 +39,7 @@
   <!--END:  FEATURE -->
   <!--IMAGE -->
   <div class="span6 center">
-    <img src="/assets/verso/responsive.jpg" class="" alt="feature bootstrap"/>
+    <img src="/assets/verso/app_landingpage.png" class="" alt="feature bootstrap"/>
   </div>
   <!-- END IMAGE -->
   <div class="span12">
@@ -58,7 +58,7 @@
 
   <!--IMAGE -->
   <div class="span6 center">
-    <img src="/assets/verso/bootstrap-layout.jpg" class="" alt="feature bootstrap"/>
+    <img src="/assets/verso/app_main_screen.png" class="" alt="feature bootstrap"/>
   </div>
   <!-- END IMAGE -->
 
@@ -103,7 +103,7 @@
   <!--END:  FEATURE -->
   <!--IMAGE -->
   <div class="span6 center">
-    <img src="/assets/verso/bootstrap-premium-code2.jpg" class="" alt="feature bootstrap"/>
+    <img src="/assets/verso/app_settings.png" class="" alt="feature bootstrap"/>
   </div>
   <!-- END IMAGE -->
   <div class="span12">
@@ -121,14 +121,14 @@
 
   <!--IMAGE -->
   <div class="span6 center">
-    <img src="/assets/verso/bootstrap-template.jpg" class="" alt="feature bootstrap"/>
+    <img src="/assets/verso/app_account_details.png" class="" alt="feature bootstrap"/>
   </div>
   <!-- END IMAGE -->
 
   <!-- FEATURE -->
   <div class="span6">
 
-    <h2 class="standart-h2title pull-left">View your billing history</h2>
+    <h2 class="standart-h2title pull-left">Update your account</h2>
     <hr class="half"/>
     <p class="lead">
       Your billing history is available online.
