--- a/app/views/features/driver_dashboard.html.erb
+++ b/app/views/features/driver_dashboard.html.erb
@@ -40,7 +40,7 @@
   <!--END:  FEATURE -->
   <!--IMAGE -->
   <div class="span6 center">
-    <img src="/assets/verso/responsive.jpg" class="" alt="feature bootstrap"/>
+    <img src="/assets/verso/user_personal_info.png" class="" alt="feature bootstrap"/>
   </div>
   <!-- END IMAGE -->
   <div class="span12">
@@ -59,7 +59,7 @@
 
   <!--IMAGE -->
   <div class="span6 center">
-    <img src="/assets/verso/bootstrap-layout.jpg" class="" alt="feature bootstrap"/>
+    <img src="/assets/verso/user_cars.png" class="" alt="feature bootstrap"/>
   </div>
   <!-- END IMAGE -->
 
