user and owner payments view

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -181,6 +181,13 @@
               </a>
             </div>
           </div>
+          <div class="accordion-group">
+            <div class="accordion-heading">
+              <a style="text-decoration: none;text-align: left" class="accordion-toggle btn" href="/payments/users_payments">
+                <i class="icon-road icon-white"></i><span> Payments</span>
+              </a>
+            </div>
+          </div>
         </div>
       </li>
     </ul>
