--- a/app/views/layouts/owner.html.erb
+++ b/app/views/layouts/owner.html.erb
@@ -191,7 +191,7 @@
           </div>
           <div class="accordion-group">
             <div class="accordion-heading">
-              <a style="text-decoration: none;text-align: left" class="accordion-toggle btn" href=<%= payments_path %>>
+              <a style="text-decoration: none;text-align: left" class="accordion-toggle btn" href="/owner_payments/owners_payments">
                 <i class="icon-picture"></i><span>Payments</span>
               </a>
             </div>
