--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-      <%= f.label :car %><br />
-      <%= f.text_field :car %>
+      <%= f.label :car_id %><br />
+      <%= f.text_field :car_id %>
   </div>
   <div class="field">
     <%= f.label :x_pos %><br />
@@ -24,12 +24,12 @@
     <%= f.text_field :y_pos %>
   </div>
   <div class="field">
-    <%= f.label :area %><br />
-    <%= f.text_field :area %>
+    <%= f.label :area_id %><br />
+    <%= f.text_field :area_id %>
   </div>
   <div class="field">
-    <%= f.label :user %><br />
-    <%= f.text_field :user %>
+    <%= f.label :user_id %><br />
+    <%= f.text_field :user_id %>
   </div>
   <div class="field">
     <%= f.label :start_time %><br />
