--- a/app/views/payments/owners_payments.html.erb
+++ b/app/views/payments/owners_payments.html.erb
@@ -1,8 +1,20 @@
-<h1>Listing payments</h1>
-
-<table>
-  <tr>
+<div class="row-fluid">
+<div class="accordion" id="accordionPagination">
+<div class="accordion-group">
+<div class="accordion-heading">
+<a style="text-align: left;text-decoration: none" class="accordion-toggle btn btn-danger"
+data-toggle="collapse" data-parent="#accordion2" href="#collapsePagination">
+<i class="icon-list"></i> Payments History <i class="icon-minus pull-right"></i>
+</a>
+</div>
+<div id="collapsePagination" class="accordion-body collapse in">
+<div class="accordion-inner" style="background-color: #ffffff;">
+<div class="container">
+<table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="example">
+<thead>
+  <tr >
     <th>Car</th>
+    <th>City</th>
     <th>Area</th>
     <th>User</th>
     <th>Start time</th>
@@ -11,11 +23,13 @@
     <th></th>
     <th></th>
   </tr>
-
+</thead>
+<tbody>
 <% if @payments %>
 <% @payments.each do |payment| %>
-  <tr>
+  <tr class="gradeA">
     <td><%= payment.car.car_description if payment.car %></td>
+    <td><%= payment.area.city.name %></td>
     <td><%= payment.area.name %></td>
     <td><%= payment.user.firstname + ' ' + payment.user.lastname if payment.user %></td>
     <td><%= payment.start_time %></td>
@@ -26,7 +40,16 @@
   </tr>
 <% end %>
 <% end %>
+</tbody>
 </table>
+
+</div>
+</div>
+</div>
+</div>
+
+</div>
+</div>
 
 <%= will_paginate @payments if @payments %>
 
