payment server side pagination

--- a/app/views/features/driver_dashboard.html.erb
+++ b/app/views/features/driver_dashboard.html.erb
@@ -104,7 +104,7 @@
   <!--END:  FEATURE -->
   <!--IMAGE -->
   <div class="span6 center">
-    <img src="/assets/verso/bootstrap-premium-code2.jpg" class="" alt="feature bootstrap"/>
+    <img src="/assets/verso/user_payments.png" class="" alt="feature bootstrap"/>
   </div>
   <!-- END IMAGE -->
   <div class="span12">
@@ -122,7 +122,7 @@
 
   <!--IMAGE -->
   <div class="span6 center">
-    <img src="/assets/verso/bootstrap-template.jpg" class="" alt="feature bootstrap"/>
+    <img src="/assets/verso/user_payments.png" class="" alt="feature bootstrap"/>
   </div>
   <!-- END IMAGE -->
 
