--- a/app/views/features/owner_dashboard.html.erb
+++ b/app/views/features/owner_dashboard.html.erb
@@ -41,7 +41,7 @@
   <!--END:  FEATURE -->
   <!--IMAGE -->
   <div class="span6 center">
-    <img src="/assets/verso/responsive.jpg" class="" alt="feature bootstrap"/>
+    <img src="/assets/verso/owner_cities.png" class="" alt="feature bootstrap"/>
   </div>
   <!-- END IMAGE -->
   <div class="span12">
@@ -60,7 +60,7 @@
 
   <!--IMAGE -->
   <div class="span6 center">
-    <img src="/assets/verso/bootstrap-layout.jpg" class="" alt="feature bootstrap"/>
+    <img src="/assets/verso/owner_payments.png" class="" alt="feature bootstrap"/>
   </div>
   <!-- END IMAGE -->
 
@@ -104,7 +104,7 @@
   <!--END:  FEATURE -->
   <!--IMAGE -->
   <div class="span6 center">
-    <img src="/assets/verso/bootstrap-premium-code2.jpg" class="" alt="feature bootstrap"/>
+    <img src="/assets/verso/owner_payments.png" class="" alt="feature bootstrap"/>
   </div>
   <!-- END IMAGE -->
   <div class="span12">
@@ -122,7 +122,7 @@
 
   <!--IMAGE -->
   <div class="span6 center">
-    <img src="/assets/verso/bootstrap-template.jpg" class="" alt="feature bootstrap"/>
+    <img src="/assets/verso/owner_payments.png" class="" alt="feature bootstrap"/>
   </div>
   <!-- END IMAGE -->
 
