--- a/app/views/payments/owners_payments.html.erb
+++ b/app/views/payments/owners_payments.html.erb
@@ -10,7 +10,7 @@ data-toggle="collapse" data-parent="#accordion2" href="#collapsePagination">
 <div id="collapsePagination" class="accordion-body collapse in">
 <div class="accordion-inner" style="background-color: #ffffff;">
 <div class="container">
-<table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="example">
+<table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="owner-payments-table" data-source="/owner_payments/owners_payments.json">
 <thead>
   <tr >
     <th>Car</th>
@@ -25,21 +25,6 @@ data-toggle="collapse" data-parent="#accordion2" href="#collapsePagination">
   </tr>
 </thead>
 <tbody>
-<% if @payments %>
-<% @payments.each do |payment| %>
-  <tr class="gradeA">
-    <td><%= payment.car.car_description if payment.car %></td>
-    <td><%= payment.area.city.name %></td>
-    <td><%= payment.area.name %></td>
-    <td><%= payment.user.firstname + ' ' + payment.user.lastname if payment.user %></td>
-    <td><%= payment.start_time %></td>
-    <td><%= payment.end_time %></td>
-    <td><%= link_to 'Show', payment %></td>
-    <td><%= link_to 'Edit', edit_payment_path(payment) %></td>
-    <td><%= link_to 'Destroy', payment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-<% end %>
 </tbody>
 </table>
 
@@ -50,7 +35,3 @@ data-toggle="collapse" data-parent="#accordion2" href="#collapsePagination">
 
 </div>
 </div>
-
-<%= will_paginate @payments if @payments %>
-
-<br />
