--- a/app/views/payments/users_payments.html.erb
+++ b/app/views/payments/users_payments.html.erb
@@ -10,7 +10,7 @@ data-toggle="collapse" data-parent="#accordion2" href="#collapsePagination">
 <div id="collapsePagination" class="accordion-body collapse in">
 <div class="accordion-inner" style="background-color: #ffffff;">
 <div class="container">
-<table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="payments-table">
+<table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="payments-table" data-source="/payments/users_payments.json">
 <thead>
   <tr>
     <th>Car</th>
@@ -25,19 +25,7 @@ data-toggle="collapse" data-parent="#accordion2" href="#collapsePagination">
   </tr>
 </thead>
 <tbody>
-<% @payments.each do |payment| %>
-  <tr class="gradeA">
-    <td><%= payment.car.car_description %></td>
-    <td><%= payment.area.city.name %></td>
-    <td><%= payment.area.name %></td>
-    <td><%= payment.user.firstname + ' ' + payment.user.lastname %></td>
-    <td><%= payment.start_time %></td>
-    <td><%= payment.end_time %></td>
-    <td><%= link_to 'Show', payment %></td>
-    <td><%= link_to 'Edit', edit_payment_path(payment) %></td>
-    <td><%= link_to 'Destroy', payment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
+
 </tbody>
 </table>
 
@@ -48,6 +36,3 @@ data-toggle="collapse" data-parent="#accordion2" href="#collapsePagination">
 
 </div>
 </div>
-
-<%= will_paginate @payments if @payments %>
-
