--- a/app/views/areas/index.html.erb
+++ b/app/views/areas/index.html.erb
@@ -1,6 +1,17 @@
-<h1>Listing areas</h1>
-
-<table>
+<div class="row-fluid">
+<div class="accordion" id="accordionPagination">
+<div class="accordion-group">
+<div class="accordion-heading">
+<a style="text-align: left;text-decoration: none" class="accordion-toggle btn btn-danger"
+data-toggle="collapse" data-parent="#accordion2" href="#collapsePagination">
+<i class="icon-list"></i> Pagination Tabel <i class="icon-minus pull-right"></i>
+</a>
+</div>
+<div id="collapsePagination" class="accordion-body collapse in">
+<div class="accordion-inner" style="background-color: #ffffff;">
+<div class="container">
+<table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="example">
+<thead>
   <tr>
     <th>Name</th>
     <th>City</th>
@@ -9,18 +20,27 @@
     <th></th>
     <th></th>
   </tr>
-
+</thead>
+<tbody>
 <% @areas.each do |area| %>
   <tr>
     <td><%= area.name %></td>
     <td><%= area.city.name %></td>
     <td><%= area.bank_account.name %></td>
-    <td><%= link_to 'Show', [area.city,area] %></td>
+    <td><%= link_to 'Show', city_area_rates_path(area.city,area) %></td>
     <td><%= link_to 'Edit', edit_city_area_path(area.city,area) %></td>
     <td><%= link_to 'Destroy', [area.city,area], method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
+</tbody>
 </table>
+</div>
+</div>
+</div>
+</div>
+
+</div>
+</div>
 
 <br />
 
