--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -1,22 +1,42 @@
-<h1>Listing cities</h1>
-
-<table>
+<div class="row-fluid">
+<div class="accordion" id="accordionPagination">
+<div class="accordion-group">
+<div class="accordion-heading">
+<a style="text-align: left;text-decoration: none" class="accordion-toggle btn btn-danger"
+data-toggle="collapse" data-parent="#accordion2" href="#collapsePagination">
+<i class="icon-list"></i> Pagination Tabel <i class="icon-minus pull-right"></i>
+</a>
+</div>
+<div id="collapsePagination" class="accordion-body collapse in">
+<div class="accordion-inner" style="background-color: #ffffff;">
+<div class="container">
+<table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="example">
+<thead>
   <tr>
     <th>Name</th>
     <th></th>
     <th></th>
     <th></th>
   </tr>
-
+</thead>
+<tbody>
 <% @cities.each do |city| %>
   <tr>
     <td><%= city.name %></td>
-    <td><%= link_to 'Show', city %></td>
+    <td><%= link_to 'Show', city_areas_path(city) %></td>
     <td><%= link_to 'Edit', edit_city_path(city) %></td>
     <td><%= link_to 'Destroy', city, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
+</tbody>
 </table>
+</div>
+</div>
+</div>
+</div>
+
+</div>
+</div>
 
 <br />
 
