--- a/app/views/rates/index.html.erb
+++ b/app/views/rates/index.html.erb
@@ -1,6 +1,17 @@
-<h1>Listing rates</h1>
-
-<table>
+<div class="row-fluid">
+<div class="accordion" id="accordionPagination">
+<div class="accordion-group">
+<div class="accordion-heading">
+<a style="text-align: left;text-decoration: none" class="accordion-toggle btn btn-danger"
+data-toggle="collapse" data-parent="#accordion2" href="#collapsePagination">
+<i class="icon-list"></i> Pagination Tabel <i class="icon-minus pull-right"></i>
+</a>
+</div>
+<div id="collapsePagination" class="accordion-body collapse in">
+<div class="accordion-inner" style="background-color: #ffffff;">
+<div class="container">
+<table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="example">
+<thead>
   <tr>
     <th>Rate</th>
     <th>Currency</th>
@@ -15,7 +26,8 @@
     <th></th>
     <th></th>
   </tr>
-
+</thead>
+<tbody>
 <% @rates.each do |rate| %>
   <tr>
     <td><%= rate.rate %></td>
@@ -32,7 +44,15 @@
     <td><%= link_to 'Destroy', [rate.area.city, rate.area, rate], method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
+  </tbody>
 </table>
+</div>
+</div>
+</div>
+</div>
+
+</div>
+</div>
 
 <br />
 
