area get by street update

--- a/app/views/layouts/owner.html.erb
+++ b/app/views/layouts/owner.html.erb
@@ -164,7 +164,7 @@
             <div class="accordion-heading">
               <a style="text-decoration: none;text-align: left" class="accordion-toggle btn"
                  href="<%=  current_user.bank_account_id.nil? ? new_bank_account_path : edit_bank_account_path(current_user.bank_account_id) %>">
-                <i class="icon-tasks"></i><span> Owner Bank Account</span>
+                <i class="icon-tasks"></i><span>Bank Account</span>
               </a>
             </div>
           </div>
