--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -4,7 +4,7 @@
 <div class="accordion-heading">
 <a style="text-align: left;text-decoration: none" class="accordion-toggle btn btn-danger"
 data-toggle="collapse" data-parent="#accordion2" href="#collapsePagination">
-<i class="icon-list"></i> Pagination Tabel <i class="icon-minus pull-right"></i>
+<i class="icon-list"></i> All Cities <i class="icon-minus pull-right"></i>
 </a>
 </div>
 <div id="collapsePagination" class="accordion-body collapse in">
