--- a/app/views/streets/index.html.erb
+++ b/app/views/streets/index.html.erb
@@ -4,7 +4,7 @@
 <div class="accordion-heading">
 <a style="text-align: left;text-decoration: none" class="accordion-toggle btn btn-danger"
 data-toggle="collapse" data-parent="#accordion2" href="#collapsePagination">
-<i class="icon-list"></i> Pagination Tabel <i class="icon-minus pull-right"></i>
+<i class="icon-list"></i> <%= @city.name + " " + @area.name %> <i class="icon-minus pull-right"></i>
 </a>
 </div>
 <div id="collapsePagination" class="accordion-body collapse in">
@@ -13,8 +13,7 @@ data-toggle="collapse" data-parent="#accordion2" href="#collapsePagination">
 <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="example">
 <thead>
   <tr>
-    <th>Name</th>
-    <th>Area</th>
+    <th>Street</th>
     <th></th>
     <th></th>
     <th></th>
@@ -24,7 +23,6 @@ data-toggle="collapse" data-parent="#accordion2" href="#collapsePagination">
 <% @streets.each do |street| %>
   <tr>
     <td><%= street.name %></td>
-    <td><%= street.area.name %></td>
     <td><%= link_to 'Show', [street.area.city,street.area,street] %></td>
     <td><%= link_to 'Edit', edit_city_area_street_path(street.area.city,street.area,street) %></td>
     <td><%= link_to 'Destroy', [street.area.city,street.area,street], method: :delete, data: { confirm: 'Are you sure?' } %></td>
