--- a/app/views/areas/index.html.erb
+++ b/app/views/areas/index.html.erb
@@ -17,7 +17,34 @@
                 "sLengthMenu": "_MENU_ records per page"
             }
         } );
+
+        $("body").append("<a href=/cities/"+city_id+"/areas/"+area_id+"/rates/new >new Rate</>")
     }
+</script>
+<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+<meta charset="utf-8">
+<style>
+    #map-canvas {
+        height: 350px;
+        margin: 0px;
+        padding: 0px
+    }
+</style>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+<script type="text/javascript">
+    var map;
+    function initialize() {
+        var mapOptions = {
+            zoom: 8,
+            center: new google.maps.LatLng(-34.397, 150.644),
+            mapTypeId: google.maps.MapTypeId.ROADMAP
+        };
+        map = new google.maps.Map(document.getElementById('map-canvas'),
+                mapOptions);
+    }
+
+    google.maps.event.addDomListener(window, 'load', initialize);
 </script>
 
 <div class="row-fluid">
@@ -65,6 +92,29 @@ data-toggle="collapse" data-parent="#accordion2" href="#collapsePagination">
 <br />
 
 <div class="row-fluid">
+    <div class="accordion" id="accordionChart1">
+      <div class="accordion-group">
+        <div class="accordion-heading">
+          <a style="text-align: left;text-decoration: none" class="accordion-toggle btn btn-primary"
+             data-toggle="collapse" data-parent="#accordion2" href="#collapseChart1">
+            <i class="icon-bar-chart"></i> Areas map <i class="icon-minus pull-right"></i>
+          </a>
+        </div>
+        <div id="collapseChart1" class="accordion-body collapse in">
+          <div class="accordion-inner">
+            <div id="spline">
+              <div id="map-canvas"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+</div>
+
+<br />
+
+<div class="row-fluid">
   <div class="accordion" id="accordionPagination">
     <div class="accordion-group">
       <div class="accordion-heading">
@@ -106,4 +156,3 @@ data-toggle="collapse" data-parent="#accordion2" href="#collapsePagination">
 
 <br />
 
-<%= link_to 'New Rate', new_city_area_rate_path if @area%>
