--- a/app/views/areas/index.html.erb
+++ b/app/views/areas/index.html.erb
@@ -1,3 +1,4 @@
+<% content_for :scripts do %>
 <script>
     function showRates(area_id, city_id) {
         $('#area-rates').attr('data-source','/cities/'+city_id+'/areas/'+area_id+'/rates.json');
@@ -23,33 +24,15 @@
         }
     }
 </script>
-<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-<meta charset="utf-8">
-<style>
-    #map-canvas {
-        height: 350px;
-        margin: 0px;
-        padding: 0px
-    }
-</style>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
-<script type="text/javascript">
-    var map;
-    function initialize() {
-        var mapOptions = {
-            zoom: 8,
-            center: new google.maps.LatLng(-34.397, 150.644),
-            mapTypeId: google.maps.MapTypeId.ROADMAP
-        };
-        map = new google.maps.Map(document.getElementById('map-canvas'),
-                mapOptions);
-    }
+<%= javascript_include_tag 'jquery.cookie' %>
+<%= javascript_include_tag 'jquery.hotkeys' %>
+<%= javascript_include_tag 'jquery.jstree' %>
+<%= javascript_include_tag 'http://maps.google.com/maps/api/js?sensor=false' %>
+<%= javascript_include_tag 'areas' %>
+<%= stylesheet_link_tag 'areas' %>
+<% end %>
 
-    google.maps.event.addDomListener(window, 'load', initialize);
-</script>
-
-<div class="row-fluid">
+<!--<div class="row-fluid">
 <div class="accordion" id="accordionPagination">
 <div class="accordion-group">
 <div class="accordion-heading">
@@ -91,7 +74,7 @@ data-toggle="collapse" data-parent="#accordion2" href="#collapsePagination">
 
 <%= link_to 'New Area', new_city_area_path %>
 <br />
-<br />
+<br />-->
 
 <div class="row-fluid">
     <div class="accordion" id="accordionChart1">
@@ -105,7 +88,13 @@ data-toggle="collapse" data-parent="#accordion2" href="#collapsePagination">
         <div id="collapseChart1" class="accordion-body collapse in">
           <div class="accordion-inner">
             <div id="spline">
-              <div id="map-canvas"></div>
+              <div id="container">
+                <div id="navbar">
+                  <div id="areasTree"  style="height:500px;"></div>
+                </div>
+                <div id="map" style="height: 500px; "></div>
+              </div>
+              <div id="footer"><div id="shape_b" onclick="save()"/></div>
             </div>
           </div>
         </div>
