--- a/app/views/abouts/sitemap.html.erb
+++ b/app/views/abouts/sitemap.html.erb
@@ -230,4 +230,4 @@
 
 </div>
 
-<% content_for :scripts, javascript_include_tag("jquery.isotope.min") %>
+<% content_for :scripts, javascript_include_tag("jstree/jquery") %>
