--- a/app/views/areas/index.html.erb
+++ b/app/views/areas/index.html.erb
@@ -24,9 +24,9 @@
         }
     }
 </script>
-<%= javascript_include_tag 'jquery.cookie' %>
-<%= javascript_include_tag 'jquery.hotkeys' %>
-<%= javascript_include_tag 'jquery.jstree' %>
+<%= javascript_include_tag 'jstree/jquery.cookie' %>
+<%= javascript_include_tag 'jstree/jquery.hotkeys' %>
+<%= javascript_include_tag 'jstree/jquery.jstree' %>
 <%= javascript_include_tag 'http://maps.google.com/maps/api/js?sensor=false' %>
 <%= javascript_include_tag 'areas' %>
 <%= stylesheet_link_tag 'areas' %>
