update areas api

--- a/app/views/areas/index.html.erb
+++ b/app/views/areas/index.html.erb
@@ -20,7 +20,7 @@
         } );
 
         if(!document.getElementById('new-rate')) {
-            $("body").append("<a id='new-rate' href=/cities/"+city_id+"/areas/"+area_id+"/rates/new >new Rate</>");
+            $("#accordionPagination").append("<a id='new-rate' href=/cities/"+city_id+"/areas/"+area_id+"/rates/new >new Rate</>");
         }
     }
 </script>
