--- a/app/views/features/owner_dashboard.html.erb
+++ b/app/views/features/owner_dashboard.html.erb
@@ -41,7 +41,7 @@
   <!--END:  FEATURE -->
   <!--IMAGE -->
   <div class="span6 center">
-    <img src="/assets/verso/owner_cities.png" class="" alt="feature bootstrap"/>
+    <img src="/assets/verso/owner_areas.png" class="" alt="feature bootstrap"/>
   </div>
   <!-- END IMAGE -->
   <div class="span12">
@@ -118,15 +118,15 @@
 <!-- ################ -->
 <!-- CONTAINER  FEATURE -->
 <!-- ################ -->
-<div class="row-fluid">
+<!--<div class="row-fluid">
 
-  <!--IMAGE -->
+  &lt;!&ndash;IMAGE &ndash;&gt;
   <div class="span6 center">
     <img src="/assets/verso/owner_payments.png" class="" alt="feature bootstrap"/>
   </div>
-  <!-- END IMAGE -->
+  &lt;!&ndash; END IMAGE &ndash;&gt;
 
-  <!-- FEATURE -->
+  &lt;!&ndash; FEATURE &ndash;&gt;
   <div class="span6">
 
     <h2 class="standart-h2title pull-left">Billing statistics</h2>
@@ -136,12 +136,12 @@
     </p>
 
   </div>
-  <!--END:  FEATURE -->
+  &lt;!&ndash;END:  FEATURE &ndash;&gt;
 
   <div class="span12">
     <hr class="half"/>
   </div>
-</div>
+</div>-->
 <!-- ################ -->
 <!-- END: CONTAINER  FEATURE -->
 <!-- ################ -->
