areas polygon integration start

--- a/app/views/areas/_form.html.erb
+++ b/app/views/areas/_form.html.erb
@@ -16,7 +16,7 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :city %><br />
+    <%= f.label :city_id %><br />
     <%= @area.city.name %>
   </div>
   <div class="actions">
