--- a/app/views/areas/index.html.erb
+++ b/app/views/areas/index.html.erb
@@ -1,30 +1,5 @@
 <%= csrf_meta_tag %>
 <% content_for :scripts do %>
-<script>
-    function showRates(area_id, city_id) {
-        $('#area-rates').attr('data-source','/cities/'+city_id+'/areas/'+area_id+'/rates.json');
-
-        $('#area-rates').dataTable( {
-            "sDom": "<'row'<'span6'l><'span6'f>r>t<'row'<'span6'i><'span6'p>>",
-            "sPaginationType": "bootstrap",
-            "bJQueryUI": true,
-            "bProcessing": true,
-            "bServerSide": true,
-            "bDestroy":true,
-            "sAjaxSource": $('#area-rates').data('source'),
-            "fnServerParams": function ( aoData ) {
-                aoData.push( { "area_id": area_id } );
-            },
-            "oLanguage": {
-                "sLengthMenu": "_MENU_ records per page"
-            }
-        } );
-
-        if(!document.getElementById('new-rate')) {
-            $("#accordionPagination").append("<a id='new-rate' href=/cities/"+city_id+"/areas/"+area_id+"/rates/new >new Rate</>");
-        }
-    }
-</script>
 <%= javascript_include_tag 'jstree/jquery.cookie' %>
 <%= javascript_include_tag 'jstree/jquery.hotkeys' %>
 <%= javascript_include_tag 'jstree/jquery.jstree' %>
@@ -109,7 +84,7 @@ data-toggle="collapse" data-parent="#accordion2" href="#collapsePagination">
 
 <br />
 
-<div class="row-fluid">
+<!--<div class="row-fluid">
   <div class="accordion" id="accordionPagination">
     <div class="accordion-group">
       <div class="accordion-heading">
@@ -149,5 +124,5 @@ data-toggle="collapse" data-parent="#accordion2" href="#collapsePagination">
   </div>
 </div>
 
-<br />
+<br /> -->
 
