added link back to area from rates

--- a/app/views/rates/index.html.erb
+++ b/app/views/rates/index.html.erb
@@ -54,4 +54,5 @@ data-toggle="collapse" data-parent="#accordion2" href="#collapsePagination">
 
 <br />
 
-<%= link_to 'New Rate', new_city_area_rate_path %>
+<%= link_to 'New Rate', new_city_area_rate_path %> <br/>
+<%= link_to 'Back to Area', city_areas_path(@city) %>
